--- a/paper/hillclimbing.bib
+++ b/paper/hillclimbing.bib
@@ -171,4 +171,25 @@
   publisher={IEEE}
 }
 
+@article{wood2000modelling,
+  title={Modelling and smoothing parameter estimation with multiple quadratic penalties},
+  author={Wood, Simon N},
+  journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+  volume={62},
+  number={2},
+  pages={413--428},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{golub1979generalized,
+  title={Generalized cross-validation as a method for choosing a good ridge parameter},
+  author={Golub, Gene H and Heath, Michael and Wahba, Grace},
+  journal={Technometrics},
+  volume={21},
+  number={2},
+  pages={215--223},
+  year={1979},
+  publisher={Taylor \& Francis}
+}
 
